# CDJeezus

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cdjeez/: __init__.py  __main__.py  backup.py  cli.py  config.py  daemon.py  fingerprint.py  library_scan.py  metadata.py  serato_crate.py  serato_watch.py  setup.py  soulseek.py  soundcloud.py  state.py  style.py  updater.py
cdjeezus/: __init__.py  __main__.py  backup.py  cli.py  config.py  converter.py  daemon.py  match.py  metadata.py  notify.py  serato_crate.py  setup.py  soulseek.py  soundcloud.py  style.py  updater.py
streamflacr/: __init__.py  __main__.py  backup.py  cli.py  config.py  daemon.py  library_scan.py  match.py  metadata.py  serato_crate.py  setup.py  soulseek.py  soundcloud.py  state.py  updater.py
