[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflacr"
version = "0.10.1"
description = "Auto-download FLAC from Soulseek for SoundCloud playlist additions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aioslsk>=1.6.0",
    "mutagen>=1.47",
    "numpy>=1.24",
    "pillow>=10.0",
    "pycryptodome>=3.20",
    "python-dotenv>=1.2",
    "pydantic-settings>=2.4",
    "requests>=2.31",
    "serato-tools>=4.0",
]

[project.scripts]
streamflacr = "streamflacr.cli:main"

[tool.setuptools.packages.find]
include = ["streamflacr*"]

[tool.uv]
# serato-tools depends on librosa (which pulls in numba/llvmlite that fail to build),
# but we only use smart_crate.py which has zero dependency on librosa.
# This override makes librosa unsatisfiable so the resolver skips it.
override-dependencies = ["librosa; python_version < '0'"]
