[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflacr"
version = "0.22.0"
description = "Auto-download FLAC from Soulseek for SoundCloud playlist additions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aioslsk>=1.6.0",
    "mutagen>=1.47",
    "numpy>=1.24",
    "pillow>=10.0",
    "pycryptodome>=3.20",
    "python-dotenv>=1.2",
    "pydantic-settings>=2.4",
    "requests>=2.31",
]

[project.scripts]
streamflacr = "streamflacr.cli:main"

[tool.setuptools.packages.find]
include = ["streamflacr*"]

