[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdjeezus"
version = "0.31.0"
description = "SoundCloud → Soulseek → Serato/Rekordbox pipeline with auto-tagging, smart crates, and library backup"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aioslsk>=1.6.0",
    "mutagen>=1.47",
    "numpy>=1.24",
    "pillow>=10.0",
    "pycryptodome>=3.20",
    "python-dotenv>=1.2",
    "pydantic-settings>=2.4",
    "requests>=2.31",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
cdjeezus = "cdjeezus.cli:main"

[tool.setuptools.packages.find]
include = ["cdjeezus*"]
